Release History

v1.0.0905.1309
- Added JsonFx.IO.loadScript for assisting with cross-domain jsonp calls.

v1.0.0905.1210
- Added JsonFx.JsonRpc.Settings for better JSON-RPC configuration and error handling.

v1.0.0905.1020
- Added static Helper class for simplifying integration with ASP.NET MVC

v1.0.0905.0422
- fixed bug where unparsed blocks were emitting incorrectly
- fixed possible exceptions during exception handling in Cassini Web Server

v1.0.0905.0323
- fixed bug where empty code blocks could emit an invalid structure

v1.0.0905.0212
- enabled merge format to explicitly specify debug / compact script paths
	- enables providing extra debug logic or alternate compaction (e.g. obfuscation)
	- good for libraries (like jQuery) which don't compact well with JSMin
- centralized JBST minification as single pass
	- now compacts inline code better
	- compilation is more efficient
- fixed JSLint options in binding script

v1.0.0904.2623
- added mechanism for removing stream compression
- moved stream compression later in page cycle

v1.0.0904.2609
- added expires header to globalization strings requests
- added parent-script hash to help with expiration

v1.0.0904.1707
- fixed the situation where DateTimeKind.Unspecified DateTimes were being treated as server-local time
- now DateTimeKind.Unspecified DateTimes are treated as browser-local time
- added static method so EcmaScriptWriter.Serialize works as expected

v1.0.0904.1609
- fix for <object> tags
- allowing defaults for all JsonFx.IO events
- fix in auto-link TLD regex

v1.0.0903.2921
- fixed typo in error messages

v1.0.0903.2812
- added jbst:oninit callback which executes one time for an element after fully hydrated
- added jbst:onload callback which executes one time for an element after is inserted into parentNode

v1.0.0903.2510
- standardized alert/debugger pattern for errors

v1.0.0903.2408